# engram

./: .dockerignore  .gitignore  AGENTS.md  ALLOCATOR_FIXES_REPORT.md  BASELINE_PREPARATION_COMPLETE.md  BUG_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_POLICY.md  FEATURES.md  KNOWN_ISSUES.md  MILESTONE_10_FIXES_COMPLETE.md  MILESTONE_5_6_ROADMAP.md  Makefile  NEXT_STEPS.md  PHASE_1_1_FIXES_REQUIRED.md  PHASE_1_1_TIER_ITERATION_REVIEW.md  PHASE_1_2_API_HANDLER_REVIEW.md  PHASE_1_2_COMPLETION_SUMMARY.md  PHASE_1_2_CRITICAL_FINDING_DEDUPLICATION.md  PHASE_1_2_FIXES_REQUIRED.md  PHASE_1_2_REVIEW_SUMMARY.md  PHASE_2_FIXES_REQUIRED.md  PHASE_2_FIX_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_FIX_1_PARKING_LOT_ANALYSIS.md  PHASE_2_FIX_1_REVIEW.md  PHASE_2_FIX_1_REVIEW_SUMMARY.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_2_REVIEW.md  PHASE_2_REVIEW_SUMMARY.md  PHASE_2_WRAP_UP_COMPLETE.md  PROJECT_STATUS_AND_RECOMMENDATIONS.md  README.md  TASK_004_TECHNICAL_REVIEW.md  TASK_016_TECHNICAL_REVIEW.md  TASK_017_CONCURRENT_BUG_REPORT.md  TASK_017_REVIEW_SUMMARY.md  TASK_017_TECHNICAL_REVIEW.md  (+17 more)
docs/: index.md  (+12 more)
engram-cli/: Cargo.toml  build.rs
engram-cli/config/: cluster.toml  default.toml  production.toml
engram-cli/examples/: cognitive_workflow.rs  dump_metrics_snapshot.rs  memory_pool_soak.rs  spreading_visualizer.rs
engram-cli/examples/scenarios/: README.md
engram-cli/examples/soak/: README.md
engram-cli/src/: api.rs  benchmark.rs  benchmark_simple.rs  cluster.rs  config.rs  docs.rs  error_reviewer.rs  grpc.rs  interactive.rs  lib.rs  main.rs  main_backup.rs  openapi.rs  replication.rs  router.rs
engram-cli/src/admin/: mod.rs  rebalance.rs
engram-cli/src/auth/: grpc.rs  middleware.rs  mod.rs
engram-cli/src/cli/: backup.rs  benchmark_ops.rs  commands.rs  diagnose.rs  memory.rs  migrate.rs  mod.rs  restore.rs  server.rs  space.rs  status.rs  validate.rs
engram-cli/src/handlers/: complete.rs  mod.rs  query.rs  streaming.rs  websocket.rs
engram-cli/src/http/: cluster.rs  mod.rs
engram-cli/src/output/: mod.rs  progress.rs  table.rs
engram-cli/tests/: api_complete_tests.rs  api_tier_iteration_tests.rs  auth_middleware_basic_tests.rs  cluster_initialization.rs  config_tests.rs  dual_memory_backcompat.rs  dual_memory_feature_flags.rs  grpc_auth_tests.rs  grpc_tests.rs  http_api_tests.rs  integration_tests.rs  monitoring_tests.rs  multi_space_grpc.rs  multi_space_isolation.rs  probabilistic_api_tests.rs  query_endpoint_tests.rs  space_commands.rs  streaming_tests.rs  websocket_streaming_test.rs
engram-core/: Cargo.toml  build.rs
engram-core/benches/: README.md  ann_comparison.rs  ann_validation.rs  baseline_performance.rs  batch_hnsw_insert.rs  binding_performance.rs  cognitive_patterns_performance.rs  cold_tier_columnar.rs  comprehensive.rs  concurrent_hnsw_validation.rs  concurrent_recall.rs  concurrent_recall.rs.disabled  confidence_calibration.rs  datasets.rs  decay_comparison.rs  dual_memory_budget.rs  dual_memory_regression.rs  dual_memory_types.rs  engram_ann.rs  gpu_abstraction_overhead.rs  gpu_candidate_profiling.rs  gpu_cosine_similarity.rs  gpu_hnsw.rs  gpu_performance_validation.rs  gpu_spreading.rs  hnsw_dynamics.rs  hnsw_update_latency.rs  metrics_overhead.rs  mock_annoy.rs  mock_faiss.rs  multi_space_overhead.rs  pattern_detection.rs  profiling_harness.rs  query_operations.rs  query_parser.rs  query_parser_performance.rs  recall_performance.rs  simd_benchmark.rs  spreading_benchmarks.rs  spreading_comparison.rs  (+10 more)
engram-core/benches/milestone_1/: activation_spreading.rs  batch_operations.rs  differential_testing.rs  formal_verification.rs  hardware_variation.rs  hnsw_index.rs  integration_scenarios.rs  metamorphic_testing.rs  mod.rs  pattern_completion.rs  performance_fuzzing.rs  probabilistic_query.rs  regression_detection.rs  report_generation.rs  statistical_framework.rs  vector_ops.rs
engram-core/benches/regression/: baselines.json  main.rs
engram-core/cuda/: common.cuh
engram-core/docs/: CONCEPT_FORMATION_BIOLOGICAL_VALIDATION.md  TASK_F_VALIDATION_SUMMARY.md
engram-core/examples/: cognitive_recall_patterns.rs  dual_memory_budget_usage.rs  error_demo.rs  query_examples.rs  quick_hnsw_bench.rs
engram-core/fuzz/: Cargo.toml
engram-core/proptest-regressions/: error.txt
engram-core/src/: error.rs  error_review.rs  error_testing.rs  graph.rs  lib.rs  memory.rs  numeric.rs  store.rs  streaming_health.rs  types.rs
engram-core/tests/: accuracy_validation_tests.rs  adaptive_metrics_streaming.rs  ann_benchmark_thresholds.rs  benchmark_framework_test.rs  binding_index_tests.rs  cluster_discovery.rs  cognitive_patterns_integration_suite.rs  cognitive_spreading_tests.rs  cognitive_tracing.rs  completion_confidence_tests.rs  concept_formation_rate_analysis.rs  concept_formation_validation.rs  confidence_calibration_tests.rs  confidence_propagation_properties.rs  confidence_property_tests.proptest-regressions  confidence_property_tests.rs  consolidation_integration_tests.rs  consolidation_load_tests.rs  content_addressing_test.rs  differential_testing.rs  differential_testing.rs.bak  dream_tests.rs  drm_biological_validation.rs  drm_false_recall_validation.rs  dual_memory_chaos.rs  dual_memory_differential.rs  dual_memory_load.rs  dual_memory_migration.rs  dual_storage_integration_tests.rs  error_message_validation.rs  error_recovery_integration.rs  evidence_aggregation_tests.rs  fan_effect_tests.rs  feature_integration_tests.rs  figurative_language_test.rs  forgetting_curves_validation.rs  full_integration_test.rs  gpu_acceleration_test.rs  gpu_differential_cosine.rs  gpu_differential_hnsw.rs  (+73 more)
engram-proto/: Cargo.toml  build.rs
engram-proto/src/: lib.rs
engram-proto/tests/: proto_tests.rs
engram-storage/: Cargo.toml
engram-storage/src/: lib.rs
tools/loadtest/: Cargo.toml  README.md
tools/migrate-neo4j/: Cargo.toml  README.md
tools/migrate-postgresql/: Cargo.toml  README.md
tools/migrate-redis/: Cargo.toml  README.md
tools/migration-common/: Cargo.toml  README.md
tools/perf-analyzer/: Cargo.toml  README.md
(+2070 files in other folders)
