[workspace]
resolver = "2"
members = [
    "engram-core",
    "engram-storage",
    "engram-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Engram Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orchard9/engram"
homepage = "https://engram.io"
keywords = ["graph", "database", "cognitive", "memory", "probabilistic"]
categories = ["database", "data-structures"]

[workspace.dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Data structures
dashmap = "5.5"
parking_lot = "0.12"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1.0"
assert_cmd = "2.0"
predicates = "3.0"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true