[workspace]
resolver = "2"
members = [
    "engram-core",
    "engram-storage",
    "engram-cli",
    "engram-proto",
]
exclude = [
    "engram-core/fuzz",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Engram Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orchard9/engram"
homepage = "https://engram.io"
keywords = ["graph", "database", "cognitive", "memory", "probabilistic"]
categories = ["database", "data-structures"]

[workspace.dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"
color-eyre = "0.6"

# Core graph library
petgraph = "0.8"

# Concurrency
tokio = { version = "1.47", features = ["full"] }
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.11"

# Memory management  
mimalloc = "0.1"
bumpalo = "3.16"
atomic_float = "1.0"

# Vector operations
nalgebra = "0.34"
simdeez = "2.0"
wide = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rkyv = "0.7"

# Storage
memmap2 = "0.9"
zstd = "0.13"

# Data structures
dashmap = "5.5"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
quickcheck = "1.0"
assert_cmd = "2.0"
predicates = "3.0"
divan = "0.1"
rand = "0.8"
approx = "0.5"

# Profiling
pprof = "0.13"
memory-stats = "1.2"

# GPU compute
wgpu = "26.0"

# Development dependencies
arbitrary = "1.3"

# Documentation and content generation
doc-comment = "0.3"
include_dir = "0.7"
indoc = "2.0"

# OpenAPI documentation
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

[patch.crates-io]
statrs = { path = "third_party/statrs" }
jobserver = { path = "third_party/jobserver" }
tonic = { path = "third_party/tonic" }
hwloc = { path = "third_party/hwloc" }
dashmap = { path = "third_party/dashmap" }
metrics-util = { path = "third_party/metrics-util" }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
