[package]
name = "engram-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI interface for the Engram cognitive graph database"
readme = "../README.md"

[lib]
name = "engram_cli"
path = "src/lib.rs"

[[bin]]
name = "engram"
path = "src/main.rs"

[[bin]]
name = "error-reviewer"
path = "src/error_reviewer.rs"

[[bin]]
name = "fuzz-spreading-latency"
path = "src/bin/fuzz_spreading_latency.rs"

[[bin]]
name = "consolidation-soak"
path = "src/bin/consolidation_soak.rs"

[features]
default = ["hnsw_index", "memory_mapped_persistence", "monitoring"]
hnsw_index = ["engram-core/hnsw_index"]
memory_mapped_persistence = ["engram-core/memory_mapped_persistence"]
monitoring = ["engram-core/monitoring"]
cluster_discovery_dns = ["engram-core/cluster_discovery_dns"]

[dependencies]
engram-core = { path = "../engram-core", features = ["hnsw_index", "memory_mapped_persistence", "monitoring", "cluster_discovery_dns"] }
engram-storage = { path = "../engram-storage" }
engram-proto = { path = "../engram-proto" }
tonic = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = "0.17"
termion = "4.0"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
rand = "0.8"
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
toml = "0.8"
dirs = "5.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
urlencoding = "2.1"
num_cpus = "1.16"
sys-info = "0.9"
rustyline = "14.0"
indoc = { workspace = true }
doc-comment = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
serde_yaml = "0.9"
regex = "1.10"
clap_complete = "4.4"
futures = "0.3"
dashmap = { workspace = true }

[build-dependencies]
clap = { workspace = true }
clap_complete = "4.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rand = "0.8"
tempfile = "3.8"
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true, features = ["process", "io-util"] }
portpicker = "0.1"
engram-proto = { path = "../engram-proto" }
tonic = "0.13"
urlencoding = "2.1"
tower = "0.5"
tokio-tungstenite = "0.24"
futures = "0.3"

[lints]
workspace = true
