[package]
name = "migrate-neo4j"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Neo4j to Engram migration tool"
keywords = ["database", "migration", "neo4j", "graph"]
categories = ["database", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "migrate-neo4j"
path = "src/main.rs"

[dependencies]
migration-common = { path = "../migration-common" }
engram-core = { path = "../../engram-core" }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
indicatif = "0.17"

# Neo4j driver
neo4rs = "0.8"

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
