[package]
name = "migrate-postgresql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "PostgreSQL to Engram migration tool"
keywords = ["database", "migration", "postgresql", "graph"]
categories = ["database", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "migrate-postgresql"
path = "src/main.rs"

[dependencies]
migration-common = { path = "../migration-common" }
engram-core = { path = "../../engram-core" }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
indicatif = "0.17"

# PostgreSQL driver
tokio-postgres = "0.7"
postgres-types = "0.2"

# Topological sorting
petgraph = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
