[package]
name = "migrate-redis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Redis to Engram migration tool"
keywords = ["database", "migration", "redis", "graph"]
categories = ["database", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "migrate-redis"
path = "src/main.rs"

[dependencies]
migration-common = { path = "../migration-common" }
engram-core = { path = "../../engram-core" }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
indicatif = "0.17"

# Redis client
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
